tests/Houtamelo.Spire.Analyzers.Tests/SPIRE023/cases/NotPartial_Class.cs
//@ should_fail
// SPIRE023: containing class is not partial

public class Host_023_NotPartial
{
    public static void Call([Inlinable] Action<int> action, int x) //~ ERROR
    {
        action(x);
    }
}
